--- a/БД Тестирование/Задания/Вывести количество студентов, которые проходили тестирование по каждой дисциплине.md
+++ b/БД Тестирование/Задания/Вывести количество студентов, которые проходили тестирование по каждой дисциплине.md
@@ -1,4 +1,4 @@
-# Вывести количество студентов, которые проходили тестирование по каждой дисциплине.
+# Вывести количество студентов, которые проходили тестирование по каждой дисциплине
 
 ## Задание
 
