Update Добавление новой попытки для определенного студента и определенной дисциплины.md

--- a/БД Тестирование/Задания/Добавление новой попытки для определенного студента и определенной дисциплины.md
+++ b/БД Тестирование/Задания/Добавление новой попытки для определенного студента и определенной дисциплины.md
@@ -8,9 +8,41 @@
 
 <img width="297" height="229" alt="image" src="https://github.com/user-attachments/assets/710b9e97-2da1-48a8-9fec-91d98a4bf5e5" />
 
-## Наполнение таблиц subject, student, attempt перед выполнением запроса
+<details>
+<summary><h2>Наполнение таблиц subject, student, attempt перед выполнением запроса</h2></summary>
 
-<img width="757" height="503" alt="2026-02-07_17-22-35" src="https://github.com/user-attachments/assets/56872af0-b532-4277-9186-8514bdf7100b" />
+таблица student                 
+
+| student_id | name_student    |  
+|---|---|
+| 1          | Баранов Павел   |  
+| 2          | Абрамова Катя   |  
+| 3          | Семенов Иван    | 
+| 4          | Яковлева Галина | 
+
+таблица subject
+
+| subject_id | name_subject      |
+|---|---|
+| 1          | Основы SQL        |
+| 2          | Основы баз данных |
+| 3          | Физика            |
+
+таблица attempt
+
+| attempt_id | student_id | subject_id | date_attempt | result |
+|---|---|---|---|---|
+| 1          | 1          | 2          | 2020-03-23   | 67     |
+| 2          | 3          | 1          | 2020-03-23   | 100    |
+| 3          | 4          | 2          | 2020-03-26   | 0      |
+| 4          | 1          | 1          | 2020-04-15   | 33     |
+| 5          | 3          | 1          | 2020-04-15   | 67     |
+| 6          | 4          | 2          | 2020-04-21   | 100    |
+| 7          | 3          | 1          | 2020-05-17   | 33     |
+| 8          | 1          | 2          | 2020-06-12   | 67     |
+
+
+</details>
 
 ## Решение
 
