Update Самые используемые кабинеты.md

--- a/БД Расписание/Задания/Самые используемые кабинеты.md
+++ b/БД Расписание/Задания/Самые используемые кабинеты.md
@@ -9,7 +9,7 @@
 <img width="159" height="174" alt="2026-02-10_04-36-34" src="https://github.com/user-attachments/assets/1ad2009f-f7f6-49c7-97d1-b58d076affc5" />
 
 <details>
-<summary><h2>Наполнение таблицы Schedule перед выполнением запроса</h2></summary>
+<summary><h2>Наполнение таблицы Schedule</h2></summary>
 
 | id | date                      | class | number_pair | teacher | subject | classroom |
 |----|---------------------------|-------|-------------|---------|---------|-----------|
