Update Максимальный возраст в 10 классе.md

--- a/БД Расписание/Задания/Максимальный возраст в 10 классе.md
+++ b/БД Расписание/Задания/Максимальный возраст в 10 классе.md
@@ -5,6 +5,12 @@
 Найдите максимальный возраст (количество лет) среди обучающихся 10 классов на сегодняшний день. Для получения текущих даты и времени используйте функцию NOW().
 Используйте конструкцию "as max_year" для указания максимального возраста в годах. Это необходимо для корректной проверки.
 
+## Структура табллицы
+
+<img width="403" height="282" alt="2026-02-10_05-31-35" src="https://github.com/user-attachments/assets/f1e4f9ee-e858-4fcd-b710-c961fa1ff8ae" />
+
+
+
 ## Решение
 
 ```mysql
@@ -16,3 +22,9 @@ HAVING Class.name LIKE "10%"
 ORDER BY max_year DESC
 LIMIT 1;
 ```
+
+## Результат
+
+| id | max_year |
+|----|------------|
+| 1  | 25         |
