Update Самые используемые кабинеты.md

--- a/БД Расписание/Задания/Самые используемые кабинеты.md
+++ b/БД Расписание/Задания/Самые используемые кабинеты.md
@@ -74,3 +74,12 @@ HAVING COUNT(number_pair) = (
 		LIMIT 1
 	)
 ```
+
+## Результат
+
+| id | classroom |
+|----|------------|
+| 1  | 13         |
+| 2  | 43         |
+| 3  | 53         |
+
